objects/ASI_CRM_Expense_Control_Form_Line__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Expense Control Form Lines</relationshipLabel>
        <relationshipName>Expense_Control_Form_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Description__c</fullName>
        <formula>ASI_MFM_A_C_Code__r.ASI_MFM_A_C_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A/C Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Check_Payment_Subbrand_First__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Payment Subbrand First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cr_Dr__c</fullName>
        <label>Cr/Dr</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department_Category__c</fullName>
        <label>Department Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Expense_Control_Form__c</fullName>
        <label>Expense Control Form</label>
        <referenceTo>ASI_MFM_Expense_Control_Form__c</referenceTo>
        <relationshipLabel>Expense Control Form Lines</relationshipLabel>
        <relationshipName>Expense_Control_Form_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Group_By__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Mark_Up_Value__c</fullName>
        <inlineHelpText>Please input Decimal Number.</inlineHelpText>
        <label>Mark-Up Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Subbrand_Code__c</fullName>
        <label>Subbrand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Saving_Formula_2__c</fullName>
        <label>Tax Saving Formula 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Saving_Formula__c</fullName>
        <label>Tax Saving Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accrual</fullName>
                </value>
                <value>
                    <fullName>Prepayment</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>AP Dummy Receipt</fullName>
                </value>
                <value>
                    <fullName>A/P Payable</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>A/P FA</fullName>
                </value>
                <value>
                    <fullName>FA</fullName>
                </value>
                <value>
                    <fullName>Rental Deposit</fullName>
                </value>
                <value>
                    <fullName>Balance collection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Control_Form_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense Control Form Line</label>
    <nameField>
        <displayFormat>ECFL-{000000}</displayFormat>
        <label>Expense Control Form Line No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Control Form Lines</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Expense_Control_Form_Allowed_User</fullName>
        <active>true</active>
        <label>CN Expense Control Form Allowed User</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Expense_Control_Form_Line</fullName>
        <active>true</active>
        <label>CN Expense Control Form Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Tax_Saving_Control_Form_Line</fullName>
        <active>true</active>
        <label>CN Tax Saving Control Form Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>